--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <main>
         <div id="control-div">
             <button id="reset-btn">Reset Board</button>
+            <button id="ai-btn">Move with Ai</button>
         </div>
         <div id="board-div">
         </div>
